# api/controllers/hello_world.js
@@ -25,8 +25,7 @@ var util = require('util');
   we specify that in the exports of this module that 'hello' maps to the function named 'hello'
  */
 module.exports = {
-    hello: hello,
-    setup: setup
+    hello: hello
 };
 
 /*
@@ -44,24 +43,3 @@ function hello(req, res) {
   res.json(hello);
 }
 
-var User = require('../helpers/models/user'); // get our mongoose model
-
-function setup (req, res) {
-    // create a sample user
-    var newUser = new User({
-        name: 'mazhekin',
-        password: 'test',
-        admin: true
-    });
-
-    // save the sample user
-    newUser.save(function(err) {
-        if (err) throw err;
-
-        console.log('User saved successfully');
-        res.json({
-            success: true,
-            message: 'User saved successfully'
-        });
-    });
-}
